--- a/package.json
+++ b/package.json
@@ -1,69 +1,68 @@
 {
-	"name": "react-i18n-next",
-	"displayName": "react-i18n-next",
-	"description": "",
-	"version": "0.0.1",
-	"engines": {
-		"vscode": "^1.65.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onLanguage:react",
-		"onLanguage:typescriptreact",
-		"onLanguage:javascriptreact",
-		"onLanguage:javascript",
-		"onLanguage:typescript"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "react-i18n-next.sync",
-				"title": "更新中文语料"
-			},
-			{
-				"command": "react-i18n-next.addZh",
-				"title": "添加中文语料CDN地址"
-			}
-		],
-		"configuration": {
-			"type": "object",
-			"title": "TypeScript configuration",
-			"properties": {
-					"react-i18n-next.zhUrl": {
-							"type": "string",
-							"default": "",
-							"description": "中文模块cdn地址"
-					}
-			}
-		}
-	},
-	"scripts": {
-		"vscode:prepublish": "yarn run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "yarn run compile && yarn run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/glob": "^7.2.0",
-		"@types/mocha": "^9.1.0",
-		"@types/node": "14.x",
-		"@types/request": "^2.48.8",
-		"@types/vscode": "^1.65.0",
-		"@typescript-eslint/eslint-plugin": "^5.16.0",
-		"@typescript-eslint/parser": "^5.16.0",
-		"@vscode/test-electron": "^2.1.3",
-		"eslint": "^8.11.0",
-		"glob": "^7.2.0",
-		"mocha": "^9.2.2",
-		"typescript": "^4.5.5"
-	},
-	"dependencies": {
-		"axios": "^0.26.1",
-		"node-fetch": "^3.2.3"
-	}
+  "name": "react-i18n-next",
+  "displayName": "react-i18n-next",
+  "description": "",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.65.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onLanguage:react",
+    "onLanguage:typescriptreact",
+    "onLanguage:javascriptreact",
+    "onLanguage:javascript",
+    "onLanguage:typescript"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "react-i18n-next.sync",
+        "title": "更新中文语料"
+      },
+      {
+        "command": "react-i18n-next.addZh",
+        "title": "添加中文语料CDN地址"
+      }
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "TypeScript configuration",
+      "properties": {
+        "react-i18n-next.zhUrl": {
+          "type": "string",
+          "default": "",
+          "description": "中文模块cdn地址"
+        }
+      }
+    }
+  },
+  "scripts": {
+    "vscode:prepublish": "yarn run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "yarn run compile && yarn run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "14.x",
+    "@types/request": "^2.48.8",
+    "@types/vscode": "^1.65.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "@vscode/test-electron": "^2.1.3",
+    "eslint": "^8.11.0",
+    "glob": "^7.2.0",
+    "mocha": "^9.2.2",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "axios": "^0.26.1"
+  }
 }
