--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-i18n-next",
   "displayName": "react-i18n-next",
+  "publisher": "dengmmyy",
   "description": "",
   "version": "0.0.1",
   "engines": {
