--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "react-i18n-next",
   "publisher": "dengmmyy",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.65.0"
   },
@@ -11,7 +11,6 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:react-i18n-next.i18nTransform",
     "onLanguage:react",
     "onLanguage:typescriptreact",
     "onLanguage:javascriptreact",
@@ -23,15 +22,19 @@
     "commands": [
       {
         "command": "react-i18n-next.sync",
-        "title": "更新中文语料"
+        "title": "更新中文语料(i18nUpdate)"
       },
       {
         "command": "react-i18n-next.addZh",
-        "title": "配置中文语料CDN地址"
+        "title": "配置中文语料远端地址(i18nZhConfig)"
       },
       {
         "command": "react-i18n-next.i18nTransform",
         "title": "中文语料转换成key(i18nTransform)"
+      },
+      {
+        "command": "react-i18n-next.searchByKey",
+        "title": "中文定位到key(i18nSearch)"
       }
     ],
     "menus": {
