feat: update icon

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publisher": "dengmmyy",
   "description": "A vscode extension for i18next",
   "version": "1.0.0",
-  "icon": "https://user-images.githubusercontent.com/20468805/173813784-7eee43fc-88c1-4915-8678-74a3cbe614a9.png",
+  "icon": "icon.png",
   "engines": {
     "vscode": "^1.65.0"
   },
