--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         },
         "react-i18n-next.translateFn": {
           "type": "string",
-          "default": "",
+          "default": "t|i18n|I18n",
           "description": "翻译函数，多个则用'|'隔开"
         }
       }
